# freecad-ai

./: .editorconfig  CHANGELOG.md  Init.py  InitGui.py  README.md  mcp_server_entry.py  package.xml
Resources/Documents/: Overview.md
docs/specs/: 2026-03-10-image-support-design.md  2026-03-10-image-support-plan.md  2026-03-12-user-tools-design.md  2026-03-12-user-tools-plan.md  2026-03-13-vision-routing-design.md  2026-03-15-skill-optimizer-design.md
freecad_ai/: __init__.py  config.py  i18n.py  paths.py
freecad_ai/core/: context.py  conversation.py  executor.py  system_prompt.py
freecad_ai/extensions/: agents_md.py  skill_evaluator.py  skills.py  user_tools.py
freecad_ai/llm/: client.py  providers.py
freecad_ai/mcp/: __init__.py  client.py  manager.py  protocol.py  server.py  transport.py
freecad_ai/tools/: executor_utils.py  freecad_tools.py  optimize_tools.py  registry.py  setup.py
freecad_ai/ui/: chat_widget.py  code_review_dialog.py  compat.py  message_view.py  optimize_dialog.py  settings_dialog.py
freecad_ai/utils/: viewport.py
hooks/log-tool-calls/: hook.py
skills/enclosure/: SKILL.md
skills/fastener-hole/: SKILL.md
skills/gear/: SKILL.md
skills/lattice/: SKILL.md
skills/optimize-skill/: handler.py
skills/skill-creator/: SKILL.md
skills/thread-insert/: SKILL.md
tests/integration/: test_create_primitive.py  test_create_wedge.py  test_multi_transform.py
tests/unit/: test_conversation.py  test_executor_utils.py  test_hooks.py  (+7 more)
translations/: compile_ts.py  freecad_ai_de.qm  freecad_ai_de.ts  update_translations.sh
